# wfplug

./: .gitignore  README.md  activate
nix/: shell.nix  wfplug-session.nix
plugins/: README.md
template/: $TEMPLATE_PLUGIN_NAME.cpp  $TEMPLATE_PLUGIN_NAME.xml  README.md  meson.build
template/testconfig/: minimal.ini
utils/: plugin_load_name.sh  plugin_target_names.sh
